// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Nat > list > empty > list([]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

╚══════════════════════════════════════════════════╝"
`;

exports[`Nat > list > single item > list([ 'apple' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'apple' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
apple
╚══════════════════════════════════════════════════╝"
`;

exports[`Nat > list > three or more items > list([ 'a', 'b', 'c', 'd' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'a', 'b', 'c', 'd' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
a, b, c, or d
╚══════════════════════════════════════════════════╝"
`;

exports[`Nat > list > three or more items > list([ 'apple', 'banana', 'cherry' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'apple', 'banana', 'cherry' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
apple, banana, or cherry
╚══════════════════════════════════════════════════╝"
`;

exports[`Nat > list > two items > list([ 'apple', 'banana' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'apple', 'banana' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
apple or banana
╚══════════════════════════════════════════════════╝"
`;

exports[`Nat list empty list([]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING

╚══════════════════════════════════════════════════╝"
`;

exports[`Nat list single item list([ 'apple' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'apple' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
apple
╚══════════════════════════════════════════════════╝"
`;

exports[`Nat list two items list([ 'apple', 'banana' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'apple', 'banana' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
apple or banana
╚══════════════════════════════════════════════════╝"
`;

exports[`Nat list three or more items list([ 'apple', 'banana', 'cherry' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'apple', 'banana', 'cherry' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
apple, banana, or cherry
╚══════════════════════════════════════════════════╝"
`;

exports[`Nat list three or more items list([ 'a', 'b', 'c', 'd' ]) 1`] = `
"
╔══════════════════════════════════════════════════╗ GIVEN ARGUMENTS
[ 'a', 'b', 'c', 'd' ]
╠══════════════════════════════════════════════════╣ THEN RETURNS STRING
a, b, c, or d
╚══════════════════════════════════════════════════╝"
`;
